# FAIR-Analysis

./: .gitignore  Dockerfile  IMPROVEMENTS.md  INSTALL.md  Makefile  PACKAGING.md  QUICKSTART.md  README.md  SECURITY.md  SECURITY_QUICKSTART.md  START_HERE.txt  TECHNICAL_REVIEW.md  TROUBLESHOOTING.md  auto_integrity.py  docker-compose.yml  fair-app.bat  fair-calc.bat  fair-quick.bat  fair_risk_app.py  fair_risk_calculator.py  generate_integrity_manifest.py  install.bat  install.sh  integrity_checker.py  pyproject.toml  quick_risk_analysis.py  requirements.txt  scenarios_template.json  setup.py  test_auto_integrity.py  test_integrity_system.py  test_mathematical_correctness.py  test_validation.py  verify_integrity.py
