[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fair-risk-calculator"
version = "1.0.0"
description = "Interactive FAIR (Factor Analysis of Information Risk) risk assessment tool"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["fair", "risk", "analysis", "cybersecurity", "monte-carlo", "simulation", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "streamlit>=1.25.0",
    "plotly>=5.10.0",
    "xlsxwriter>=3.0.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/brockcheung/FAIR-Analysis"
"Bug Reports" = "https://github.com/brockcheung/FAIR-Analysis/issues"
Source = "https://github.com/brockcheung/FAIR-Analysis"

[project.scripts]
fair-calc = "fair_risk_calculator:main"
fair-quick = "quick_risk_analysis:main"
fair-app = "fair_risk_app:main"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=html --cov-report=term"
